2020-06-11  Takaaki ISHIKAWA  <takaxp@ieee.org>

	* org-tree-slide.el: Depends on emacs 24.3
	Replace org-tree-slide--narrowing-p with buffer-narrowed-p.

2020-06-05  Takaaki ISHIKAWA  <takaxp@ieee.org>

	* org-tree-slide.el (org-tree-slide-indicator): New plist to control showing messages in mini buffer

2020-01-14  Norman Walsh  <ndw@nwalsh.com>

	* org-tree-slide.el: Add support for date header (#31)

2019-07-30  Takaaki ISHIKAWA  <takaxp@ieee.org>

	* org-tree-slide.el (org-tree-slide-content--pos): Rename

2019-06-30  Boruch Baum  <boruch_baum@gmx.com>

	* org-tree-slide.el (org-tree-slide-content): Toggle back to slide
	presentation, to exact position where you left off.
	(org-tree-slide-content--pos): New variable to support this feature.

2018-11-26  Takaaki ISHIKAWA  <takaxp@ieee.org>

	* org-tree-slide.el: Extract header colors from default face of frame
	- the implementation of `org-tree-slide-header-overlay-face' is updated so that user don't need to set the variable explicitly. In case user customized theme is updated after loading this package, an appropriate function for updating the face spec should be run in `org-tree-slide-play-hook'. For instance,
	  (defun my-reload-header-face ()
        (face-spec-set 'org-tree-slide-header-overlay-face
                 `((t (:bold t :foreground ,(face-foreground 'default)
                               :background ,(face-background 'default))))))
      (add-hook 'org-tree-slide-play-hook #'my-reload-header-face)

2018-09-06  Takaaki ISHIKAWA  <takaxp@ieee.org>

	* org-tree-slide.el: Support additional	heading faces (#28)
	- outline-1 and outline-4 can be also emphasized.

2017-11-30  Takaaki ISHIKAWA  <takaxp@ieee.org>

	* org-tree-slide.el: Added a hook for CONTENT viewing mode

2016-05-14  Takaaki ISHIKAWA  <takaxp@ieee.org>

	* org-tree-slide.el: Merged breadcrumbs feature (#23) (by Matus)
	- org-tree-slide-breadcrumbs is added to show breadcrumbs in the header
