@@ -1,3 +1,7 @@
+2020-03-07 Gunther Bachmann <gunther.bachmann@itemis.de>
+
+	* org-tree-slide.el add remaining slide presentation timer
+
 2020-06-11  Takaaki ISHIKAWA  <takaxp@ieee.org>
 
 	* org-tree-slide.el: Depends on emacs 24.3
